[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncmy>=0.2.10",
    "cryptography>=44.0.3",
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pymysql>=1.1.1",
    "ruff>=0.11.10",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
